--- a/app/views/passwords/index.html.erb
+++ b/app/views/passwords/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Password Manager</h1>
-<%= link_to "New Password", new_password_path %>
+<div class="flex justify-between items-center">
+  <h1 class="mb-0">Password Manager</h1>
+  <%= link_to "New Password", new_password_path %>
+</div>
 
 <%= render @passwords %>
