feat: Add role to user_password share
This commit will add a role field to the user_password join_table.
It will make sure, we can select, once a share password element is created,
what a particular user is able to do with it.
Feature not final implemented yet.

--- a/app/views/shares/new.html.erb
+++ b/app/views/shares/new.html.erb
@@ -7,6 +7,11 @@
 </div>
 
 <div>
+  <%= form.label :role %>
+  <%= form.select :role, UserPassword::ROLES.map{ |r| [r.titleize, r] } %>
+</div>
+
+<div>
   <%= form.submit "Share" %>
 </div>
 
