--- a/app/views/passwords/show.html.erb
+++ b/app/views/passwords/show.html.erb
@@ -8,7 +8,7 @@
       </svg>
     <% end %>
   </h1>
-  <%= link_to "Edit", edit_password_path %>
+  <%= link_to "Edit", edit_password_path(@password) if user_password.editable? %>
 </div>
 
 <h3>Credentials</h3>
@@ -25,15 +25,17 @@
   <%= button_tag "Copy", class: "px-5 py-2.5 bg-gray-200 rounded", data: { controller: "clipboard", action: "click->clipboard#copy", clipboard_content_value: @password.password } %>
 </div>
 
-<h3>Share</h3>
-
+<div class="mb-4 flex justify-between items-center">
+  <h3 class="mb-0">Shared With</h3>
+  <%= link_to "Add a user", new_password_share_path(@password) if user_password.shareable? %>
+</div>
 <div class="flex flex-col gap-1 divide-y divide-gray-100">
-  <%= link_to "Add a user", new_password_share_path(@password) %>
 
-  <% @password.users.excluding(current_user).each do |user| %>
+  <% @password.user_passwords.includes(:user).each do |user_password| %>
     <div class="flex justify-between items-center">
-      <div><%= user.email %></div>
-      <%= button_to "Remove", password_share_path(@password, user), method: :delete, data: {turbo_confirm: "Are you sure?"} %>
+      <div><%= user_password.user.email %></div>
+      <div><%= user_password.role.titleize %></div>
+      <%= button_to "Remove", password_share_path(@password, user_password.user), method: :delete, data: {turbo_confirm: "Are you sure?"} if user_password.shareable? %>
     </div>
 </div>
 
