--- a/app/views/passwords/_form.html.erb
+++ b/app/views/passwords/_form.html.erb
@@ -25,7 +25,7 @@
 
   <div>
     <%= form.submit %>
-    <%= button_tag "Delete", form: "delete_password" if user_password.deletable? %>
+    <%= button_tag "Delete", form: "delete_password" if form.object.persisted? && current_user_password.deletable? %>
   </div>
 <% end %>
 
