--- a/app/views/passwords/index.html.erb
+++ b/app/views/passwords/index.html.erb
@@ -3,4 +3,6 @@
   <%= link_to "New Password", new_password_path %>
 </div>
 
-<%= render @passwords %>
+<div class="flex flex-col divide-y divide-gray-100">
+  <%= render @passwords %>
+</div>
